  	  device/lib/mos65c02/strlen.s,
  	  device/lib/mos65c02/memcpy.s,
  	  device/lib/mos65c02/strcmp.s,
  	  device/lib/mos65c02/_setjmp.s,
  	  device/lib/mos65c02/_mullong.s,
  	  device/lib/mos65c02/_milint.s,
  	  device/lib/mos65c02/memcpy.s:
  	  Update mos65c02 library based on mos6502 improvements.
  	* device/lib/mos6502/_setjmp.s,
  	  device/lib/mos6502/_fsmul.s:
  	  Minor cleanup.
  	
2025-05-12 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_fslt.s,
  	  device/lib/mos6502/_fslib.s:
  	  Implement fslt in assembly.
  	* device/lib/mos65c02/_temp.s,
  	  device/lib/mos65c02/_ret4567.s,
  	  device/lib/mos65c02/_ret23.s,
  	  device/lib/mos65c02/_ret01.s,
  	  device/lib/mos65c02/_dptr.s,
   	  device/lib/mos6502/__sdcc_regs.s,
   	  device/lib/mos6502/Makefile.in,   	  
  	  device/lib/mos6502-stack-auto/_temp.s,
  	  device/lib/mos6502-stack-auto/_ret4567.s,
  	  device/lib/mos6502-stack-auto/_ret23.s,
  	  device/lib/mos6502-stack-auto/_ret01.s,
  	  device/lib/mos6502-stack-auto/_dptr.s,
   	  device/lib/mos6502-stack-auto/__sdcc_regs.s,
   	  device/lib/mos6502-stack-auto/Makefile.in:
   	  Reduce mos65c02 and mos6502-stack-auto ZP footprint.
 	
2025-05-10 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Save A in genPointerSet only when necessary.
  	  Restore registers from DPTR when possible in genPointerSet.
   	* src/mos6502/peeph.def:
  	  Transform lda+tax+lda into ldx+lda.

2025-05-09 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Prefer X over Y for getFreeReg.
  	* src/mos6502/peeph.def:
  	  Fix Bug-3090 regression.
  	  
2025-05-06 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  More DPTR optimizations.
  	  
2025-05-04 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Improve genMinusDec.
  	  Skip writing to DPTR if it already has the correct value.
  	  Additional genMinusDec improvements.
  	  Renamed several variables in genPointerSet.